Closed
Bug 188103
Opened 22 years ago
Closed 22 years ago
assertions when manipulating the MathML attribute style sheet
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: rbs, Assigned: rbs)
References
()
Details
Attachments
(1 file)
1.15 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Following bz changes in the CSS loading machinery (bug 107567), assertions are
firing when trying to map MathML attributes to CSS. Will attach a simple patch
to tidy things up.
![]() |
||
Comment 2•22 years ago
|
||
Comment on attachment 110893 [details] [diff] [review]
patch
r+sr=bzbarsky; I had missed that it's inserted into the style set there....
I need to think of a good way to move all this stuff to the UA sheet level in
the cascade. :(
Attachment #110893 -
Flags: superreview+
Attachment #110893 -
Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•