fix assertions when manipulating the MathML attribute style sheet, b=188103, r+sr=bzbarsky