layout/mathml/base/src/nsMathMLFrame.cpp
@@ -556,6 +556,9 @@ GetMathMLAttributeStyleSheet(nsIPresContext* aPresContext,
   cssSheet->SetDefaultNameSpaceID(kNameSpaceID_MathML);
   nsCOMPtr<nsIStyleSheet> sheet(do_QueryInterface(cssSheet));
 
+  // all done, no further activity from the net involved, so we better do this
+  sheet->SetComplete();
+
   // insert the stylesheet into the styleset without notifying observers
   styleSet->AppendAgentStyleSheet(sheet);
   *aSheet = sheet;
@@ -653,8 +656,6 @@ nsMathMLFrame::MapAttributesIntoCSS(nsIPresContext* aPresContext,
       // that may come from reconstructing the frame tree. Our rules only need
       // a re-resolve of style data and a reflow, not a reconstruct-all...
       sheet->SetOwningDocument(nsnull);
-      // We're about to manipulate the CSSOM, so we better do this
-      sheet->SetComplete();
     }
 
     // check for duplicate, if a similar rule is already there, don't bother to add another one
